# performativeGYM

./: .gitignore  CITATION.bib  README.md  landscapes.py  optimizers.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/nonlinear/: PerfGDReinforce_0.json
examples/: __init__.py  cosine.py  credit.py  datasets.py  linear.py  logger.py  mixture.py  nonlinear.py  pricing.py  utils.py
performative_gym/: __init__.py  logger.py  optimizers.py  utils.py
