[project]
name = "performative_gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "jax>=0.6.1",
    "neural-tangents>=0.5.0",
    "optax>=0.2.5",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.1",
    "tyro>=0.9.24",
]

[project.optional-dependencies]
wandb = ["wandb>=0.20.1"]
mlflow = ["databricks-sdk>=0.56.0", "mlflow>=3.1.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["performative_gym"]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git", rev = "76ca370" }

[dependency-groups]
dev = [
    "microsoft-python-type-stubs",
    "pandas-stubs>=2.2.3.250527",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
reportMissingTypeArgument = "none"
reportUnnecessaryComparison = "none"
reportCallInDefaultInitializer = "warning"
reportPropertyTypeMismatch = "warning"
reportUninitializedInstanceVariable = "warning"
reportPrivateUsage = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportConstantRedefinition = "warning"
# these errors are a bit annoying
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
